# finetuning-kokoro

./: main.py  pyproject.toml
kokoro/: __init__.py  istftnet.py  model.py  pipeline.py
