[project]
name = "finetuning-kokoro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "attr>=0.3.2",
    "espeakng-loader>=0.2.4",
    "matplotlib>=3.10.8",
    "misaki>=0.9.4",
    "num2words>=0.5.14",
    "phonemizer>=3.3.0",
    "phonemizer-fork>=3.3.2",
    "pip>=25.3",
    "spacy>=3.8.11",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
